platform/ingress-gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata: # kpt-merge: /example
  name: gateway
  labels:
    istio.io/rev: asm-managed # kpt-set: ${controlplanerevision}
spec: {}
