platform/ingress-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: # kpt-merge: example/istio-ingressgateway
  name: istio-ingressgateway # kpt-set: ${name}
  namespace: gateway
  annotations:
    internal.kpt.dev/upstream-identifier: 'apps|Deployment|example|istio-ingressgateway'
spec:
  replicas: 3
  selector:
    matchLabels:
      app: istio-ingressgateway # kpt-set: ${name}
      istio: ingressgateway
  template:
    metadata:
      annotations:
        # This is required to tell Anthos Service Mesh to inject the gateway with the
        # required configuration.
        inject.istio.io/templates: gateway
      labels:
        app: istio-ingressgateway # kpt-set: ${name}
        istio: ingressgateway
    spec:
      containers:
        - name: istio-proxy
          image: auto # The image will automatically update each time the pod starts.
          resources:
            limits:
              cpu: 2000m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 128Mi
      serviceAccountName: istio-ingressgateway # kpt-set: ${name}
