platform/ingress-gateway/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata: # kpt-merge: example/gateway
  name: gateway
  namespace: gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
