platform/ingress-gateway/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata: # kpt-merge: example/virtual-service
  name: virtual-service
  namespace: gateway
spec:
  hosts:
    - "*"
  gateways:
    - gateway
  http:
    - name: "mock-v2-route"
      match:
        - headers:
            x-shypple-featureset:
              exact: v2
          uri:
            prefix: "/api/mock"
          ignoreUriCase: true
      route:
        - destination:
            host: mock.mock.svc.cluster.local
            subset: v2

    - name: "mock-v1-route"
      match:
        - headers:
            x-shypple-featureset:
              exact: v1
          uri:
            prefix: "/api/mock"
          ignoreUriCase: true
      route:
        - destination:
            host: mock.mock.svc.cluster.local
            subset: v1

    - name: "mock-default-route"
      match:
        - uri:
            prefix: "/api/mock"
          ignoreUriCase: true
      route:
        - destination:
            host: mock.mock.svc.cluster.local
            subset: v1
